--- a/templates/theme-index.html
+++ b/templates/theme-index.html
@@ -14,9 +14,9 @@ from django.core.urlresolvers import reverse
                     ${homepage_overlay_html}
                     % else:
                     ## Translators: 'Open edX' is a brand, please keep this untranslated. See http://openedx.org for more information.
-                    <h1>${_("Welcome to Open edX!")}</h1>
+                    <h1>${_("Welcome to Class @CraftAcademy")}</h1>
                     ## Translators: 'Open edX' is a brand, please keep this untranslated. See http://openedx.org for more information.
-                    <p>${_("It works! This is the default homepage for this Open edX instance.")}</p>
+                    <p>${_("Our Learning Management System runs on Open EdX")}</p>
                     % endif
                 </div>
                 % if settings.FEATURES.get('ENABLE_COURSE_DISCOVERY'):
