--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -9,10 +9,21 @@
 //  Color variables (from Stanford palette unless noted)
 //-----------------
 
+//Gray Color Variables
+$gray: #3f3f3f; //Main Text Color
+$gray-75: lighten($gray, 18.25%); //Lighter Text Color
+$gray-3: #e9e9e9; //Block/Course BG Color
+$gray-2: #f2f2f2;
+$gray-1: #fbfbfb; //Main BG Color
+$white: $gray-1;
+
+$black: #2e2e2e;
+$black-80: #585858;
+
 //Main Color Variables
 $main-color: #f28e24;
-$dark-color: #f28e24; //Link Color
-$light-color: #f4e00c; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
+$dark-color: grey; //Link Color
+$light-color: $gray; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
 $bg-color: #f7fe81; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
 
 //Main BG Color Variables
@@ -25,17 +36,9 @@ $secondary: #b5a4b7;
 $secondary-50: lighten($secondary, 9%);
 $secondary-25: lighten($secondary, 20%); //Important Heading BG Color 
 
-//Gray Color Variables
-$gray: #3f3f3f; //Main Text Color
-$gray-75: lighten($gray, 18.25%); //Lighter Text Color
 
-$gray-3: #e9e9e9; //Block/Course BG Color
-$gray-2: #f2f2f2;
-$gray-1: #fbfbfb; //Main BG Color
-$white: $gray-1;
 
-$black: #2e2e2e;
-$black-80: #585858;
+
 
 
 
