removes links in footer - 2

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -20,11 +20,11 @@ from branding.api import get_footer
         <div class="colophon">
             <nav class="nav-colophon" aria-label="${_('About')}">
                 <ol>
-                    % for item_num, link in enumerate(footer['navigation_links'], start=1):
-                    <li class="nav-colophon-0${item_num}">
+                    ## % for item_num, link in enumerate(footer['navigation_links'], start=1):
+                    <!--li class="nav-colophon-0${item_num}">
                         <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
-                    </li>
-                    % endfor
+                    </li-->
+                    ## % endfor
                 </ol>
             </nav>
 
