--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -18,15 +18,7 @@ from branding.api import get_footer
             % endif
     >
         <div class="colophon">
-            <nav class="nav-colophon" aria-label="${_('About')}">
-                <ol>
-                    ## % for item_num, link in enumerate(footer['navigation_links'], start=1):
-                    <!--li class="nav-colophon-0${item_num}">
-                        <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
-                    </li-->
-                    ## % endfor
-                </ol>
-            </nav>
+            
 
             <div class="wrapper-logo">
                 <p>
@@ -48,11 +40,11 @@ from branding.api import get_footer
 
             <nav class="nav-legal" aria-label="${_('Legal')}">
                 <ul>
-                    ## % for item_num, link in enumerate(footer['legal_links'], start=1):
-                    <!--li class="nav-legal-0${item_num}">
+                    % for item_num, link in enumerate(footer['legal_links'], start=1):
+                    <li class="nav-legal-0${item_num}">
                         <a href="${link['url']}">${link['title']}</a>
-                    </li-->
-                    ## % endfor
+                    </li>
+                    % endfor
                 </ul>
             </nav>
         </div>
