--- a/templates/static_templates/theme-honor.html
+++ b/templates/static_templates/theme-honor.html
@@ -1,9 +1,9 @@
 <%! from django.utils.translation import ugettext as _ %>
 <%inherit file="../main.html" />
 
-<%block name="pagetitle">${_("Honor Code")}</%block>
+<%block name="pagetitle">${_("Terms and Conditions")}</%block>
 
 <section class="static-container honor">
-    <h1>${_("Honor Code")}</h1>
-    <p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+    <h1>${_("Terms and Conditions")}</h1>
+    <p>Please redirect to  <a href="https://craftacademy.se/terms/" target="_blank">Terms and Conditions</a> on Craft Academy main sites.</p>
 </section>
