adds custom styling to toc page

--- a/templates/static_templates/theme-honor.html
+++ b/templates/static_templates/theme-honor.html
@@ -2,6 +2,23 @@
 <%inherit file="../main.html" />
 
 <%block name="pagetitle">${_("Terms and Conditions")}</%block>
+<style>
+    p {
+        color: grey;
+        margin: 10px 10px 10px 10px;
+        font-size: 14px;
+    }
+
+    li {
+        color: grey;
+        font-size: 14px;
+    }
+
+    h1, h2, h3 {
+        text-transform: uppercase !important;
+    }
+
+</style>
 
 
 <section class="static-container honor">
