--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -188,7 +188,7 @@ $footer_margin: ($baseline/4) 0;
 //-----------------
 //  CSS BG Images
 //-----------------
-$homepage-bg-image: url('http://assets.craftacademy.se/images/backgrounds/splash_3.jpg');
+$homepage-bg-image: url('https://assets.craftacademy.se/images/backgrounds/splash_3.jpg');
 
 $login-banner-image: none;
 $register-banner-image: none;
