--- a/lms/static/sass/lms-main-rtl.scss
+++ b/lms/static/sass/lms-main-rtl.scss
@@ -1,3 +1,3 @@
-$static-path: '../../../..';
+$static-path: '../../../../edx-platform';
 @import 'lms/static/sass/lms-main-rtl';
 @import 'default';
